# ncsdk2

./: .gitignore  ATTRIBUTIONS  install-utilities.sh  install.sh
api/: CMakeLists.txt
api/include/: ncHighClass.h
api/python/mvnc/: highclass.py
api/src/: CMakeLists.txt  Makefile  libmvnc.so.0  mvnc_api.c  mvnc_api_highclass.c  sudo  version.txt
api/src/common/components/USB_WIN/: gettime.c  usb_winusb.c  usb_winusb.h
api/src/common/components/WinPthread/: win_pthread.c  win_pthread.h  win_semaphore.c  win_semaphore.h
api/src/common/components/XLink/pc/: UsbLinkPlatform.c  XLinkPlatform.c  usb_boot.c  usb_boot.h
api/src/common/components/XLink/shared/: UsbLinkPlatform.h  XLink.c  XLink.h  XLinkDispatcher.c  XLinkDispatcher.h  XLinkPlatform.h  XLinkPrivateDefines.h  XLinkPublicDefines.h  XLinkVersion.h
api/src/common/components/XLinkConsole/pc/: XLinkConsole.c
api/src/mvnc/: MvNCAPI-ma2450.mvcmd  MvNCAPI-ma2480.mvcmd
api/src/obj-x86_64/: libmvnc.so.0  mvnc_api.d
api/src/obj-x86_64/home/eason/workshop/movidius/ncsdk-2.04.00.06/api/src/common/components/XLink/pc/: UsbLinkPlatform.d  usb_boot.d
api/src/obj-x86_64/home/eason/workshop/movidius/ncsdk-2.04.00.06/api/src/common/components/XLink/shared/: XLink.d  XLinkDispatcher.d
api/src/obj-x86_64/home/eason/workshop/movidius/ncsdk-2.04.00.06/api/src/common/components/XLinkConsole/pc/: XLinkConsole.d
docs/: TOC.html  caffe.html  compiler_error.html  configure_network.html  docker.html  docker_proxy.html  examples.html  hardware_networks.html  index.html  install.html  ncs.html  release_notes.html  search.json  sitemap.xml  support.html  tensorflow.html  tf_compile_guidance.html  tf_modelzoo.html  tf_slim.html  virtualenv.html  vm_config.html  windows.html
docs/ncapi/: c_api_migration.html  python_api_migration.html  readme.html
docs/ncapi/ncapi1/: readme.html
docs/ncapi/ncapi1/c_api/: mvncAllocateGraph.html  mvncCloseDevice.html  mvncDeallocateGraph.html  mvncDeviceOptions.html  mvncGetDeviceName.html  mvncGetDeviceOption.html  mvncGetGlobalOption.html  mvncGetGraphOption.html  mvncGetResult.html  mvncGlobalOptions.html  mvncGraphOptions.html  mvncLoadTensor.html  mvncOpenDevice.html  mvncSetDeviceOption.html  mvncSetGlobalOption.html  mvncSetGraphOption.html  mvncStatus.html  readme.html
docs/ncapi/ncapi1/py_api/: Device.AllocateGraph.html  Device.CloseDevice.html  Device.GetDeviceOption.html  Device.OpenDevice.html  Device.SetDeviceOption.html  Device.__init__.html  Device.html  DeviceOption.html  EnumerateDevices.html  GetGlobalOption.html  GlobalOption.html  Graph.DeallocateGraph.html  Graph.GetGraphOption.html  Graph.GetResult.html  Graph.LoadTensor.html  Graph.SetGraphOption.html  Graph.html  GraphOption.html  SetGlobalOption.html  Status.html  readme.html
docs/ncapi/ncapi2/: readme.html
docs/ncapi/ncapi2/c_api/: ncDeviceClose.html  ncDeviceCreate.html  ncDeviceDestroy.html  ncDeviceGetOption.html  ncDeviceHandle_t.html  ncDeviceHwVersion_t.html  ncDeviceOpen.html  ncDeviceOption_t.html  ncDeviceSetOption.html  ncDeviceState_t.html  ncFifoAllocate.html  ncFifoCreate.html  ncFifoDataType_t.html  ncFifoDestroy.html  ncFifoGetOption.html  ncFifoHandle_t.html  ncFifoOption_t.html  ncFifoReadElem.html  ncFifoRemoveElem.html  ncFifoSetOption.html  ncFifoState_t.html  ncFifoType_t.html  ncFifoWriteElem.html  ncGlobalGetOption.html  ncGlobalOption_t.html  ncGlobalSetOption.html  ncGraphAllocate.html  ncGraphAllocateWithFifos.html  ncGraphAllocateWithFifosEx.html  ncGraphCreate.html  ncGraphDestroy.html  ncGraphGetOption.html  ncGraphHandle_t.html  ncGraphOption_t.html  ncGraphQueueInference.html  ncGraphQueueInferenceWithFifoElem.html  ncGraphSetOption.html  ncGraphState_t.html  ncLogLevel_t.html  ncStatus_t.html  (+2 more)
docs/ncapi/ncapi2/py_api/: Device.close.html  Device.destroy.html  Device.get_option.html  Device.html  Device.open.html  Device.set_option.html  DeviceHwVersion.html  DeviceOption.html  DeviceState.html  Fifo.allocate.html  Fifo.destroy.html  Fifo.get_option.html  Fifo.html  Fifo.read_elem.html  Fifo.remove_elem.html  Fifo.set_option.html  Fifo.write_elem.html  FifoDataType.html  FifoOption.html  FifoState.html  FifoType.html  GlobalOption.html  Graph.allocate.html  Graph.allocate_with_fifos.html  Graph.destroy.html  Graph.get_option.html  Graph.html  Graph.queue_inference.html  Graph.queue_inference_with_fifo_elem.html  Graph.set_option.html  GraphOption.html  GraphState.html  LogLevel.html  Status.html  TensorDescriptor.html  enumerate_devices.html  global_get_option.html  global_set_option.html  readme.html
docs/tools/: check.html  compile.html  profile.html  tools_overview.html
examples/apps/win/ncs-googlenet-check_VS/: ReadMe.txt  ncs-googlenet-check.sln  ncs-googlenet-check.vcxproj
examples/caffe/GoogLeNetMx/: Makefile  mx_deploy.prototxt  run.py
examples/caffe/GoogLeNetMx/cpp/: run.cpp
extras/docker/: Dockerfile_NoPreviligeAccess
extras/docker/ncs_boot_devices/: Makefile  ncs_boot_devices.c
tests/: __init__.py  component.py  config.json  controller.py  debugger.py  log.py  util.py
tests/plugins/bsl/: bsl.py
tests/plugins/ion/: ion.py  test
tests/plugins/ncsdk_204/: ncsdk_204.py
tests/plugins/ncsdk_204/config/: icv_async.json  icv_async_noion.json  icv_sync.json  icv_test_graph.json  movidius_async.json  movidius_sync.json
tests/plugins/ncsdk_204/include/: Mutex.h  ResultParser.h  label_googlenetv1.txt  label_vggd.txt  test_runner.h  utils.h  utils_ion.h
tests/plugins/ncsdk_204/src/: Makefile  icv_async.c  icv_async_ion.c  icv_async_noion.c  icv_graph_ion.c  icv_sync_ion.c  movi_async  movi_async.c  movi_multigraph  movi_multigraph.c  movi_slow  movi_slow.c  movi_sync  movi_sync.c  readme.md  test_runner.c
tests/plugins/ncsdk_204/utils/: ResultParser.cpp  utils.c  utils_CXX.cpp  utils_ion.c
tests/plugins/test_files/: bin
tests/plugins/test_files/answer/: result_fp32.txt
tests/plugins/usb/: 98-hddlbsl.rules  bsl_reset  moviUsbBoot  usb_test.py  usb_test_concurrent.py
tools/: produce_rgb.py
tools/grahp_dump/: Graph.py  GraphParser.py  main.py
(+20 files in other folders)
